k8s/admin-frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-frontend
  template:
    metadata:
      labels:
        app: admin-frontend
    spec:
      containers:
        - name: admin-frontend
          image: admin-frontend:local
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
