k8s/postgres-1-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-1
  template:
    metadata:
      labels:
        app: postgres-1
    spec:
      containers:
        - name: postgres-1
          image: postgres:13
          ports:
            - containerPort: 5432
