k8s/postgres-2-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-2
  template:
    metadata:
      labels:
        app: postgres-2
    spec:
      containers:
        - name: postgres-2
          image: postgres:13
          ports:
            - containerPort: 5432
