k8s/service-1-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-1
  template:
    metadata:
      labels:
        app: service-1
    spec:
      containers:
        - name: service-1
          image: service-1:local
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
