k8s/service-2-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-2
  template:
    metadata:
      labels:
        app: service-2
    spec:
      containers:
        - name: service-2
          image: service-2:local
          imagePullPolicy: Never
          ports:
            - containerPort: 3001
