k8s/admin-frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: admin-frontend
spec:
  selector:
    app: admin-frontend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
