k8s/kafka.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
spec:
  serviceName: kafka
  replicas: 3
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      hostname: "kafka"
      subdomain: "kafka"
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:7.0.1
          command:
            - sh
            - -c
            - |
              export POD_INDEX=$(hostname | awk -F '-' '{print $2}')
              export KAFKA_BROKER_ID=$POD_INDEX
              export KAFKA_ADVERTISED_LISTENERS="PLAINTEXT://kafka-$POD_INDEX.kafka.default.svc.cluster.local:9092"
              echo "broker.id=$KAFKA_BROKER_ID" >> /etc/kafka/server.properties
              echo "advertised.listeners=$KAFKA_ADVERTISED_LISTENERS" >> /etc/kafka/server.properties
              exec /etc/confluent/docker/run
          ports:
            - containerPort: 9092
              name: client
      volumes:
        - name: data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  clusterIP: None
  ports:
    - name: client
      port: 9092
      protocol: TCP
  selector:
    app: kafka
