k8s/postgres-1-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-1
spec:
  selector:
    app: postgres-1
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
