k8s/postgres-2-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-2
spec:
  selector:
    app: postgres-2
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
