k8s/service-1-service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-1
spec:
  selector:
    app: service-1
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
