k8s/service-2-service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-2
spec:
  selector:
    app: service-2
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
