k8s/zookeeper.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zookeeper
spec:
  serviceName: zookeeper
  replicas: 3
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      hostname: "zookeeper"
      subdomain: "zookeeper"
      containers:
        - name: zookeeper
          image: confluentinc/cp-zookeeper:7.0.1
          command:
            - sh
            - -c
            - |
              export ZOOKEEPER_SERVER_ID=$((`hostname | awk -F '-' '{print $2}'` + 1))
              echo $ZOOKEEPER_SERVER_ID > /var/lib/zookeeper/data/myid
              exec /etc/confluent/docker/run
          ports:
            - containerPort: 2181
              name: client
            - containerPort: 2888
              name: server
            - containerPort: 3888
              name: leader-election
          volumeMounts:
            - name: data
              mountPath: /var/lib/zookeeper/data
      volumes:
        - name: data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
spec:
  clusterIP: None
  ports:
    - name: client
      port: 2181
      protocol: TCP
  selector:
    app: zookeeper
