k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: teleport.dev
      http:
        paths:
          - path: /service-1/?(.*)
            pathType: Prefix
            backend:
              service:
                name: service-1
                port:
                  number: 3000
          - path: /service-2/?(.*)
            pathType: Prefix
            backend:
              service:
                name: service-2
                port:
                  number: 3001
